fix: header>row overflow-x

--- a/css/style.scss
+++ b/css/style.scss
@@ -5,6 +5,9 @@ header {
     .container {
         position: relative;
         padding: 30px 0 20px 0;
+        .row {
+            margin: 0;
+        }
 
         ul {
             margin-right: 120px;
